2005-03-05  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* README: Provide URL to Wiki for help with compiling.
	* src/mainwindow.c: Use 'implicit pointer grab' instead of gdk_pointer_grab() due to bitching of Carl, Owen and Keith :)
	* src/map_draw_gdk.c: Better support for dashed lines (not complete).

2005-03-04  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mainwindow.c: Added click-and-hold to scroll at map window edge.
	* src/map_draw_cairo.c: Switch from cairo_text_path/cairo_fill to cairo_show_text.  Much faster!
	* src/map_draw_gdk.c: Switch from hardcoding GDK_CAP_BUTT line ends to GDK_CAP_PROJECTING.
	* src/searchwindow.c: Auto-show sidebar and choose search results tab on search.  Preview search result on select (no need to double-click).

2005-03-03  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* src/*.c: Use gtk/gtk.h instead of gnome.h where possible.
	* src/mainwindow.c: Added map dragging and scroll wheel zooming.  Made sure all callbacks start with mainwindow_
	* src/map.c: Allow draw flags to allow caller to specify which map elements get drawn.
	* src/map_draw_*: Respect draw flags.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* configure.ac: Enable directives to disable deprecated features.
	* src/main.c: Call gnome_program_init() instead of deprecated gnome_program_init().
	* src/mainwindow.c: Call gdk_draw_drawable() instead of deprecated gdk_draw_pixmap().

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* src/gui.c: Call gtk_main_quit() to shutdown properly and look for glade file in source dir first.
	* src/main.c: Clean up.
	* src/layers.c: Look for style file in source dir first.
	* src/gpsclient.c
	* src/map.c: Add prototype.

2005-03-03  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Removed drawing code, added two rendering backends.
	* src/map_draw_cairo.c:
	* src/map_draw_gdk.c: Added.
	* src/glyph.c: Made libsvg optional.
	* src/gotowindow.c: Removed lots of unused code.