@@ -7,16 +7,16 @@
 	<sublayer>
 		<property name="width" level="5" value="1.0" />
 		<property name="width" level="7" value="5.0" />
-		<property name="width" level="8" value="6.0" />
+		<property name="width" level="8" value="11.0" />
 		<property name="width" level="9" value="17.0" />
 		<property name="width" level="10" value="35.0" />
-		<property name="color" value="#797e7dff" />
+		<property name="color" value="#b0b0b0ff" />
 		<property name="join-style" value="miter" />
 		<property name="cap-style" value="round" />
 	</sublayer>
 	<sublayer>
 		<property name="width" level="7" value="3.0" />
-		<property name="width" level="8" value="4.0" />
+		<property name="width" level="8" value="9.0" />
 		<property name="width" level="9" value="15.0" />
 		<property name="width" level="10" value="33.0" />
 		<property name="color" value="#fffbffff" />
@@ -25,19 +25,21 @@
 	</sublayer>
 	<label>
 		<property name="color" value="#FF000000" />
-		<property name="font-size" level="8" value="12" />
-		<property name="font-size" level="9" value="14" />
+		<property name="font-size" level="8" value="9" />
+		<property name="font-size" level="9" value="13" />
 		<property name="font-size" level="10" value="24" />
 	</label>
 </layer>
 
 <layer name="major-roads">
 	<sublayer>
+		<property name="width" level="5" value="5.0" />
+		<property name="width" level="6" value="8.0" />
 		<property name="width" level="7" value="8.0" />
 		<property name="width" level="8" value="10.0" />
 		<property name="width" level="9" value="24.0" />
 		<property name="width" level="10" value="35.0" />
-		<property name="color" value="#ada28cff" />
+		<property name="color" value="#b0b0b0ff" />
 		<property name="join-style" value="miter" />
 		<property name="cap-style" value="round" />
 	</sublayer>
@@ -57,8 +59,8 @@
 	<label>
 		<property name="color" value="#00000000" />
 		<property name="font-size" level="6" value="8" />
-		<property name="font-size" level="7" value="10" />
-		<property name="font-size" level="8" value="12" />
+		<property name="font-size" level="7" value="9" />
+		<property name="font-size" level="8" value="10" />
 		<property name="font-size" level="9" value="20" />
 		<property name="font-size" level="10" value="34" />
 		<property name="bold" level="9" value="yes" />
@@ -200,7 +202,7 @@
 	</sublayer>
 	<label>
 		<property name="color" value="#00000000" />
-		<property name="font-size" level="7" value="10" />
+		<property name="font-size" level="7" value="11" />
 		<property name="halo" level="7" value="4" />
 	</label>
 </layer>
