@@ -70,6 +70,12 @@ void mainwindow_statusbar_update_position(void);
 // Map
 void mainwindow_set_centerpoint(mappoint_t* pPoint);
 
+typedef enum {
+	DIRECTION_NONE, DIRECTION_N, DIRECTION_NE, DIRECTION_E, DIRECTION_SE, DIRECTION_S, DIRECTION_SW, DIRECTION_W, DIRECTION_NW
+} EDirection;
+
+void mainwindow_scroll_direction(EDirection eScrollDirection, gint nPixels);
+
 #define SIDEBAR_TAB_SEARCH_RESULTS	0
 #define SIDEBAR_TAB_GPS			1
 #define SIDEBAR_TAB_LOCATIONSETS	2
